set account app prod

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,5 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  facebook_key: 1631949917087230
-  facebook_secret: 2030ced265326dbcb72a59912f954407
+  facebook_key: <%= ENV["FB_KEY"] %>
+  facebook_secret: <%= ENV["FB_SECRET"] %>
