--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,5 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  facebook_key: <%= ENV["FB_KEY"] %>
-  facebook_secret: <%= ENV["FB_SECRET"] %>
+  FACEBOOK_APP_ID: <%= ENV["FB_KEY"] %>
+  FACEBOOK_APP_SECRET: <%= ENV["FB_SECRET"] %>
