--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,4 +1,5 @@
 {
-  "application.js": "/packs/application.js",
-  "hello_react.js": "/packs/hello_react.js"
+  "application.js": "http://0.0.0.0:8080/packs/application.js",
+  "flash.js": "http://0.0.0.0:8080/packs/flash.js",
+  "hello_react.js": "http://0.0.0.0:8080/packs/hello_react.js"
 }
