--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,5 +1,8 @@
 {
-  "application.js": "/packs/application.js",
-  "flash.js": "/packs/flash.js",
-  "hello_react.js": "/packs/hello_react.js"
+  "application.js": "/packs/application-7317db6afbd3b1454646.js",
+  "application.js.map": "/packs/application-7317db6afbd3b1454646.js.map",
+  "flash.js": "/packs/flash-a2faf501a28dae41267f.js",
+  "flash.js.map": "/packs/flash-a2faf501a28dae41267f.js.map",
+  "hello_react.js": "/packs/hello_react-771cc3710f72c8d91a0b.js",
+  "hello_react.js.map": "/packs/hello_react-771cc3710f72c8d91a0b.js.map"
 }
